# Spline-Planner

./: .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yaml
include/: bs_fitter.hpp  crs_fitter.hpp  crs_generator.hpp  fitpack.hpp  kinematics_optimizer.hpp  spline_definitions.hpp  spline_planner.hpp  time_optimizer.hpp
include/spl/: definitions.hpp
include/splexecutor/: executor.hpp  manipulator_executor.hpp  rtde_executor.hpp
include/splexecutor/models/: manipulator_model.hpp  simulated_manipulator_model.hpp  ur_manipulator_model.hpp
include/splplanner/: bs_fitter.hpp  crs_fitter.hpp  fitpack.hpp  kinematics_optimizer.hpp  planner.hpp
include/splvisualizer/: gnuplot_visualizer.hpp  visualizer.hpp
resources/dh_parameters/: UR10.csv  UR10e.csv  UR20.csv  UR30.csv  UR3e.csv  UR5.csv  UR5e.csv
src/: main.cpp
